Added logout action in menu

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -19,6 +19,9 @@
     "Login to your account" : {
 
     },
+    "Logout" : {
+
+    },
     "No upcoming events planned — why not plan something fun?" : {
 
     },
