Added support for giftLimit setup

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -103,6 +103,9 @@
     "Logout" : {
 
     },
+    "May be given more then once" : {
+
+    },
     "My wishes" : {
 
     },
@@ -110,6 +113,9 @@
 
     },
     "Price:" : {
+
+    },
+    "Receive limit" : {
 
     },
     "Refresh" : {
