--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -112,6 +112,9 @@
     "Next" : {
 
     },
+    "No currencies available" : {
+
+    },
     "Price:" : {
 
     },
@@ -122,6 +125,9 @@
 
     },
     "Register" : {
+
+    },
+    "Save" : {
 
     },
     "See all" : {
