--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -21,6 +21,16 @@
         }
       }
     },
+    "%@ | %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ | %2$@"
+          }
+        }
+      }
+    },
     "%@ | Wishflow" : {
 
     },
@@ -165,6 +175,9 @@
 
     },
     "Select image" : {
+
+    },
+    "Select one or multiple events where you would like to receive your wish." : {
 
     },
     "Select the gift(s) you will give." : {
