Placed checkForDiff in a separated file; Added EditEventView with functionality

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -255,6 +255,9 @@
     "Upcoming Events" : {
 
     },
+    "Update an event" : {
+
+    },
     "Update here the details of your wish." : {
 
     },
