--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -240,6 +240,9 @@
     "Select the gift(s) you will give." : {
 
     },
+    "Select the wishes you would like to receive during this event." : {
+
+    },
     "Select wishes" : {
 
     },
