Added refresh when onDismiss sheet AddWishesToEvent; Added populate for price with currency for gifts in EventManager

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -1,6 +1,12 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "**Max price**: %@" : {
+
+    },
+    "**Min price**: %@" : {
+
+    },
     "%@ - %@" : {
       "localizations" : {
         "en" : {
