Added updateProfile functionality

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -276,6 +276,18 @@
     "Update here the details of your wish." : {
 
     },
+    "Update here your password to keep your account secure." : {
+
+    },
+    "Update here your username of email address." : {
+
+    },
+    "Update password" : {
+
+    },
+    "Update profile" : {
+
+    },
     "URL:" : {
 
     },
