Added check when selecting gifts to buy if someone else already selected it

--- a/WishFlow/Localizable.xcstrings
+++ b/WishFlow/Localizable.xcstrings
@@ -234,6 +234,9 @@
     "Nobody has accepted yet." : {
 
     },
+    "Not available – someone else has already selected this wish to buy." : {
+
+    },
     "Notifications" : {
 
     },
